WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215303
[WebGL2] Missing validation for sampler unit index
https://bugs.webkit.org/show_bug.cgi?id=215303
Summary
[WebGL2] Missing validation for sampler unit index
James Darpinian
Reported
2020-08-07 16:41:15 PDT
[WebGL2] Missing validation for sampler unit index
Attachments
Patch
(1.92 KB, patch)
2020-08-07 16:44 PDT
,
James Darpinian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Darpinian
Comment 1
2020-08-07 16:44:43 PDT
Created
attachment 406226
[details]
Patch
Kenneth Russell
Comment 2
2020-08-07 16:48:52 PDT
Comment on
attachment 406226
[details]
Patch Looks good to me!
EWS
Comment 3
2020-08-07 17:31:31 PDT
Committed
r265401
: <
https://trac.webkit.org/changeset/265401
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406226
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-08-07 17:32:17 PDT
<
rdar://problem/66707907
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug