[WebGL2] Missing validation for sampler unit index https://bugs.webkit.org/show_bug.cgi?id=215303

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-08-07
Reviewed by Dean Jackson.

Test: webgl/2.0.0/deqp/functional/gles3/negativeshaderapi.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::bindSampler):

Canonical link: https://commits.webkit.org/228079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265401 268f45cc-cd09-0410-ab3c-d52691b4dbfc